plugins {
    id 'application'
    id 'java'
}

group = 'net.minecraft'
version = '1.0.0'

base {
    archivesName = 'Unfair-MCP'
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }
    test {
        java.srcDirs = []
        resources.srcDirs = []
    }
}

def lombokVersion = '1.18.46'
def fastutilVersion = '8.5.19'

configurations {
    localRuntime {
        canBeResolved = true
        canBeConsumed = false
    }

    lwjglRuntime {
        canBeResolved = true
        canBeConsumed = false
        extendsFrom implementation
    }
}

dependencies {
    localRuntime fileTree(dir: 'libs/minecraft', include: ['*.jar'])
    localRuntime fileTree(dir: 'libs/client', include: ['*.jar'], exclude: ['lombok-*.jar'])
    compileOnly fileTree(dir: 'libs/minecraft', include: ['*.jar'])
    compileOnly fileTree(dir: 'libs/client', include: ['*.jar'], exclude: ['lombok-*.jar'])
    compileOnly fileTree(dir: 'libs/client', include: ['lombok-*.jar'])

    implementation fileTree(dir: 'libs/lwjgl', include: ['*.jar'])

    annotationProcessor fileTree(dir: 'libs/client', include: ['lombok-*.jar'])
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
    options.compilerArgs += ['-Xlint:deprecation', '-Xlint:unchecked']
}

application {
    mainClass = 'Start'
}

tasks.named('run', JavaExec) {
    workingDir = layout.projectDirectory.dir('run').asFile
    classpath += configurations.localRuntime
    jvmArgs '-Xmx2G'
}

tasks.named('jar', Jar) {
    def bundledLibraries = files(
            fileTree(dir: 'libs/minecraft', include: ['*.jar']),
            fileTree(dir: 'libs/client', include: ['*.jar'], exclude: ['lombok-*.jar'])
    )

    manifest {
        attributes 'Main-Class': application.mainClass.get()
    }

    from sourceSets.main.output
    from bundledLibraries.collect { zipTree(it) }
    from configurations.lwjglRuntime.collect { it.isDirectory() ? it : zipTree(it) }

    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.register('verifyLocalLibraries') {
    group = 'verification'
    description = 'Checks that the required local library directories are populated.'

    doLast {
        def requiredFiles = [
                "libs/client/lombok-${lombokVersion}.jar",
                "libs/client/fastutil-${fastutilVersion}.jar"
        ]
        def missingFiles = requiredFiles.findAll { !file(it).isFile() }

        if (!missingFiles.isEmpty()) {
            throw new GradleException(
                    "Missing local libraries:\n - ${missingFiles.join('\n - ')}\n" +
                            "Restore the checked-in files under libs/."
            )
        }
    }
}

tasks.named('compileJava') {
    dependsOn 'verifyLocalLibraries'
}
